--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "swiper": "^9.0.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-circle-progress": "^1.0.7",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
