--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-circle-progress": "^1.0.7",
+    "vue3-toastify": "^0.1.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -48,7 +49,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
