--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "vue/multi-word-component-names": 0
     }
   },
   "browserslist": [
